# KDAlgorithms

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  KDAlgorithmsConfig.cmake.in  LICENSE.txt  README.md  REUSE.toml  appveyor.yml  run
.github/workflows/: build.yml
.reuse/: dep5
Documentation/: ChangeLog.md  algorithms.md  deploying.md  inspiration.md
Example/: CMakeLists.txt  main.cpp
Inspiration/: CMakeLists.txt  qlistview_all_columns_selected.cpp
src/: KDAlgorithms.h  kdalgorithms.h
src/bits/: copy_or_move_iterators.h  filter.h  find_if.h  generate.h  has_reserve_trait.h  insert_wrapper.h  invoke.h  is_const_method.h  is_detected.h  method_tests.h  operators.h  read_iterator_wrapper.h  reserve_helper.h  return_type_trait.h  shared.h  to_function_object.h  transform.h  zip.h
src/kdalgorithms/: to_string.h
src/kdalgorithms_bits/: cartesian_product.h  filter.h  find_if.h  generate.h  insert_wrapper.h  invoke.h  is_const_method.h  is_detected.h  method_tests.h  operators.h  read_iterator_wrapper.h  reserve_helper.h  return_type_trait.h  shared.h  to_function_object.h  transform.h  tuple_utils.h
tests/: ContainerObserver.h  CopyObserver.cpp  copy_observer.cpp  copy_observer.h  tst_KDAlgorithms.cpp  tst_constraints.cpp  tst_kdalgorithms.cpp  tst_return_type_traits.cpp
tests/test_install/: CMakeLists.txt  main.cpp
